--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
                                  <div class="services_img">
                                     <figure><img src="images/service_img4.png" alt="#" />  </figure>
                                     <div class="ho_dist">
-                                       <span>Reader will be distracted</span>
+                                       <span>Reader will be satisfied</span>
                                     </div>
                                  </div>
                               </div>
