--- a/contact.html
+++ b/contact.html
@@ -53,7 +53,7 @@
                      <ul class="email text_align_right">
                         <li class="d_none"> <i class="fa fa-map-marker" aria-hidden="true"></i>Location</a></li>
                         <li class="d_none"><i class="fa fa-phone" aria-hidden="true"></i>+71  1234567890</a></li>
-                        <li class="d_none"> <a href="#"><i class="fa fa-envelope" aria-hidden="true"></i>demo@gmail.com</a></li>
+                        <li class="d_none"> <a href="#"><i class="fa fa-envelope" aria-hidden="true"></i>emmanueligor@yahoo.com</a></li>
                         <li class="d_none"> <a href="#">Login <i class="fa fa-user" aria-hidden="true"></i></a> </li>
                         <li class="d_none"><i class="fa fa-search" style="cursor: pointer;" aria-hidden="true"></i></li>
                         <li> <button class="openbtn" onclick="openNav()"><img src="images/menu_btn.png"></button></li>
@@ -70,7 +70,7 @@
             <div class="row">
                <div class="col-md-12">
                   <div class="titlepage">
-                     <h2>Contact Us</h2>
+                     <h2>Call Us now</h2>
                   </div>
                </div>
             </div>
